tdf#135529 today/none only used by DateControl

Change-Id: Id8987e65ef3fae9c009af59d3a1f9d0e83726648